--- a/software/usb_ir/win32/igdaemon.vcproj
+++ b/software/usb_ir/win32/igdaemon.vcproj
@@ -2,8 +2,8 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="usb_ir"
-	ProjectGUID="{40D29588-CD68-4B28-AA2C-DB857C1D6E63}"
+	Name="igdaemon"
+	ProjectGUID="{84C520CA-58A1-4E16-8141-91CFD166959D}"
 	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
@@ -14,13 +14,13 @@
 			Name="Debug|Win32"
 			OutputDirectory="Debug"
 			IntermediateDirectory="Debug"
-			ConfigurationType="2"
+			ConfigurationType="1"
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..;libusb-win32;popt"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;IGUANAIR_EXPORTS"
+				AdditionalIncludeDirectories="..;libusb-win32"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="5"
@@ -32,13 +32,13 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="libusb.lib Ws2_32.lib"
-				OutputFile="$(OutDir)/usb_ir.dll"
+				AdditionalDependencies="libusb.lib"
+				OutputFile="$(OutDir)/igdaemon.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="libusb-win32"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/usb_ir.pdb"
-				SubSystem="2"
+				ProgramDatabaseFile="$(OutDir)/igdaemon.pdb"
+				SubSystem="1"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"/>
@@ -69,7 +69,7 @@
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;IGUANAIR_EXPORTS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="4"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -79,10 +79,10 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/usb_ir.dll"
+				OutputFile="$(OutDir)/igdaemon.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
-				SubSystem="2"
+				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="1"/>
@@ -116,13 +116,40 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
-				RelativePath=".\base.c">
+				RelativePath="..\list.c">
+			</File>
+			<File
+				RelativePath="..\pipes.c">
+			</File>
+			<File
+				RelativePath=".\service.c">
+			</File>
+			<File
+				RelativePath="..\support.c">
+			</File>
+			<File
+				RelativePath="..\usbclient.c">
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
+			<File
+				RelativePath="..\base.h">
+			</File>
+			<File
+				RelativePath="..\list.h">
+			</File>
+			<File
+				RelativePath="..\pipes.h">
+			</File>
+			<File
+				RelativePath="..\support.h">
+			</File>
+			<File
+				RelativePath="..\usbclient.h">
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
