Tons of changes to make windows work reasonably well. I'll need to check these against linux and likely make a new driver release.

--- a/software/usb_ir/win32/igdaemon.vcproj
+++ b/software/usb_ir/win32/igdaemon.vcproj
@@ -124,7 +124,7 @@
 				RelativePath="..\dataPackets.c">
 			</File>
 			<File
-				RelativePath="..\iguanadev.c">
+				RelativePath="..\igdaemon.c">
 			</File>
 			<File
 				RelativePath="..\list.c">
