Addition of a tiny part of the new gui client, and much better installing for Windows.  The system *should* properly place the .INF file, AND register and start the service.  What still needs to be tested is the INF placement, and what to put in the inf file to help it find the .dll and .sys files.

--- a/software/usb_ir/win32/IguanaIR Package.vcproj
+++ b/software/usb_ir/win32/IguanaIR Package.vcproj
@@ -28,6 +28,8 @@
 			ConfigurationType="0">
 			<Tool
 				Name="VCNMakeTool"
+				BuildCommandLine="c:\python24\python setup.py $(OutDir)"
+				CleanCommandLine="del iguanaIR.iss"
 				Output="IguanaIR Packaging.exe"/>
 		</Configuration>
 	</Configurations>
