--- a/software/usb_ir/win32/igclient.vcproj
+++ b/software/usb_ir/win32/igclient.vcproj
@@ -129,6 +129,9 @@
 				RelativePath="..\list.c">
 			</File>
 			<File
+				RelativePath=".\popt\popt-fix.c">
+			</File>
+			<File
 				RelativePath="..\support.c">
 			</File>
 		</Filter>
