Add popt-fix the the projects.  Also need to fix popt-fix versions to take the correct arguments.

--- a/software/usb_ir/win32/igclient.vcproj
+++ b/software/usb_ir/win32/igclient.vcproj
@@ -146,6 +146,9 @@
 				RelativePath="..\list.h">
 			</File>
 			<File
+				RelativePath=".\popt\popt-fix.h">
+			</File>
+			<File
 				RelativePath="..\support.h">
 			</File>
 		</Filter>
