--- a/software/usb_ir/win32/igdaemon.vcproj
+++ b/software/usb_ir/win32/igdaemon.vcproj
@@ -172,6 +172,9 @@
 				RelativePath="..\pipes.h">
 			</File>
 			<File
+				RelativePath=".\popt\popt-fix.h">
+			</File>
+			<File
 				RelativePath="..\protocol.h">
 			</File>
 			<File
