--- a/software/usb_ir/testdata/technics.conf
+++ b/software/usb_ir/testdata/technics.conf
@@ -3,19 +3,19 @@
 # by sending it to <lirc@bartelmus.de>
 #
 # this config file was automatically generated
-# using lirc-0.8.1-CVS(iguanaIR) on Sun Oct  1 22:44:33 2006
+# using lirc-0.8.1(iguanaIR) on Wed Apr 11 14:18:30 2007
 #
 # contributed by 
 #
-# brand:                       testdata/technics
+# brand:                       technics.conf.conf
 # model no. of remote control: 
 # devices being controlled by this remote:
 #
 
 begin remote
 
-  name  technics
-  bits           48
+  name  technics.conf.conf
+  bits           24
   flags SPACE_ENC
   eps            30
   aeps          100
@@ -24,12 +24,26 @@ begin remote
   one           416  1268
   zero          416   397
   ptrail        418
+  pre_data_bits   24
+  pre_data       0x400405
   gap          74133
+  min_repeat      2
   toggle_bit      0
 
 
       begin codes
-          power                    0x40040500BCB9
+          power                    0x00BCB9
+          1                        0x20082D
+          1                        0x20082D
+          2                        0x2088AD
+          3                        0x20486D
+          4                        0x20C8ED
+          5                        0x20280D
+          6                        0x20A88D
+          7                        0x20684D
+          8                        0x20E8CD
+          9                        0x20183D
+          0                        0x2098BD
       end codes
 
 end remote
