--- a/software/usb_ir/autoconf/configure.ac
+++ b/software/usb_ir/autoconf/configure.ac
@@ -2,8 +2,10 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.61)
-AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
-AC_CONFIG_SRCDIR([client.c])
+AC_INIT(iguanaIR,
+  esyscmd(grep Version: ../iguanaIR.spec | sed 's/Version: *//' | tr -d '\n'),
+  support@iguanaworks.net)
+AC_CONFIG_SRCDIR([igdaemon.c])
 AC_CONFIG_HEADER([config.h])
 
 # Checks for programs.
@@ -12,16 +14,9 @@ AC_PROG_INSTALL
 AC_PROG_MAKE_SET
 
 # Checks for libraries.
-# FIXME: Replace `main' with a function in `-liguanaIR':
-AC_CHECK_LIB([iguanaIR], [main])
-# FIXME: Replace `main' with a function in `-lpopt':
-AC_CHECK_LIB([popt], [main])
-# FIXME: Replace `main' with a function in `-lpthread':
-AC_CHECK_LIB([pthread], [main])
-# FIXME: Replace `main' with a function in `-lrt':
-AC_CHECK_LIB([rt], [main])
-# FIXME: Replace `main' with a function in `-lusb':
-AC_CHECK_LIB([usb], [main])
+AC_CHECK_LIB([popt], [poptGetContext])
+AC_CHECK_LIB([pthread], [pthread_create])
+AC_CHECK_LIB([rt], [clock_gettime])
 
 # Checks for header files.
 AC_HEADER_DIRENT
@@ -52,6 +47,22 @@ AC_FUNC_STRFTIME
 AC_FUNC_VPRINTF
 AC_CHECK_FUNCS([floor gettimeofday memset mkdir select socket strchr strdup strerror strrchr strspn strstr])
 
+# TODO: make this actually check that this is linux and not darwin
+CPPFLAGS=" -DLINUX"
+CFLAGS="-Wall -pedantic"
+
+AX_CFLAGS_GCC_OPTION(-fvomit-frame)
+
+# -Wextra
+
+# enable and disable debugging
+AC_ARG_ENABLE(debug,
+  [  --enable-debug configure with debugging features enabled ],
+  [ CPPFLAGS+=" -D_DEBUG"
+    CFLAGS+=" -g" ],
+  [ CFLAGS+=" -O2" ]
+)
+
 # Allow the user to override clock_gettime detection
 AC_ARG_ENABLE(clock_gettime,
   [  --disable-clock_gettime do not use clock_gettime even if it exists],
@@ -64,6 +75,24 @@ if ! test x$DISABLE_CLOCK_GETTIME = x1; then
         AC_DEFINE(USE_CLOCK_GETTIME, 1, [use the available clock_gettime])
     )
 fi
+
+# pull the version of libusb
+AC_CHECK_LIB([usb], [usb_get_busses],
+  [
+    VERSION=0
+    for num in `libusb-config --version | tr '.' ' '`
+    do
+      VERSION=$(($VERSION * 100 + $num))
+    done
+
+    AC_DEFINE_UNQUOTED(LIBUSB_VERSION, $VERSION, [version of libusb])
+  ]
+)
+
+# fetch the python version
+AC_DEFINE_UNQUOTED(PYTHON_VERSION,
+  `python --version 2>&1 | sed 's/Python //'`, [version of python]
+)
 
 # Output some files
 AC_CONFIG_FILES([Makefile])
