--- a/software/usb_ir/autoconf/configure.ac
+++ b/software/usb_ir/autoconf/configure.ac
@@ -51,9 +51,9 @@ AC_CHECK_FUNCS([floor gettimeofday memset mkdir select socket strchr strdup stre
 CPPFLAGS=" -DLINUX"
 CFLAGS="-Wall -pedantic"
 
-AX_CFLAGS_GCC_OPTION(-fvomit-frame)
-
-# -Wextra
+# AX_CFLAGS_GCC_OPTION(-Wextra)
+# TODO: really just want this when we NEED -fpic
+AX_CFLAGS_GCC_OPTION(-fpic)
 
 # enable and disable debugging
 AC_ARG_ENABLE(debug,
