Added compatibility.{c,h} in an attempt to combine all compatibility support into a single file.  This code translates device codes at different points in the communication to allow the server to support old clients.  A lot more testing is needed.

--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -41,7 +41,7 @@ igclient: libiguanaIR.so
 libiguanaIR.so: iguanaIR.o support.o dataPackets.o pipes.o base.o
 	$(CC) -shared $(CPPFLAGS) $^ -lpopt -lrt -o $@
 
-igdaemon: daemon.o igdaemon.o usbclient.o protocol.o list.o
+igdaemon: daemon.o igdaemon.o usbclient.o protocol.o list.o compatibility.o
 	$(CC) $(CPPFLAGS) $(CFLAGS) $^ $(LIBS) -lusb -L. -liguanaIR -o $@
 
 igclient: client.o list.o
