--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -32,6 +32,9 @@ INSTALL = @INSTALL@
 # version 0.1.12 only works with kernel-2.6.10 and later
 #
 #CPPFLAGS+=-DLIBUSB_NO_THREADS
+#
+# NOTE: I'd automate this if make had a conditional.... guess I
+# should use autoconf
 
 .PHONY: all
 all: igclient igdaemon _iguanaIR.so
@@ -62,16 +65,20 @@ _iguanaIR.so: iguanaIR_wrap.c
 
 .PHONY: install
 install: all
+	install -D igclient $(DESTDIR)/usr/bin/igclient
+	install -D igdaemon $(DESTDIR)/usr/bin/igdaemon
+	install -D libiguanaIR.so $(DESTDIR)/usr/lib/libiguanaIR.so
 	install -D iguanaIR.init $(DESTDIR)/etc/rc.d/init.d/iguanaIR
 	install -D --mode=0644 iguanaIR.options $(DESTDIR)/etc/default/iguanaIR
 	install -D iguanaIR.h $(DESTDIR)/usr/include/iguanaIR.h
-#	install -D --mode 644 plug-trigger/udev/iguanaIR.rules \
-#	                      $(DESTDIR)/etc/udev/rules.d/iguanaIR.rules
-#	install --mode 755 -d $(DESTDIR)/etc/udev/devices/iguanaIR
-	install -D --mode 644 plug-trigger/hotplug/iguanaIR.usermap \
-	                      $(DESTDIR)/etc/hotplug/usb/iguanaIR.usermap
-	install -D --mode 755 plug-trigger/hotplug/iguanaIR \
-	                      $(DESTDIR)/etc/hotplug/usb/iguanaIR
+	install -D --mode 644 plug-trigger/udev/iguanaIR.rules \
+	                      $(DESTDIR)/etc/udev/rules.d/iguanaIR.rules
+	install --mode 755 -d $(DESTDIR)/etc/udev/devices/iguanaIR
+# This is for fairly old versions of Fedora....
+#	install -D --mode 644 plug-trigger/hotplug/iguanaIR.usermap \
+#	                      $(DESTDIR)/etc/hotplug/usb/iguanaIR.usermap
+#	install -D --mode 755 plug-trigger/hotplug/iguanaIR \
+#	                      $(DESTDIR)/etc/hotplug/usb/iguanaIR
 
 .PHONY: clean
 clean:
