Big code rearrangement.  Better separated the client and device code bodies.  Nuked some unnecessary includes.  Better docs.  Make the set-id work for both old and new devices.  Lot of code movement.

--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -44,7 +44,8 @@ igclient: libiguanaIR.so
 libiguanaIR.so: iguanaIR.o support.o dataPackets.o pipes.o base.o
 	$(CC) -shared $(CPPFLAGS) $^ -lpopt -lrt -o $@
 
-igdaemon: daemon.o igdaemon.o usbclient.o protocol.o list.o compatibility.o
+igdaemon: daemon.o client-interface.o device-interface.o usbclient.o \
+          list.o compatibility.o
 	$(CC) $(CPPFLAGS) $(CFLAGS) $^ $(LIBS) -lusb -L. -liguanaIR -o $@
 
 igclient: client.o list.o
