--- a/software/usb_ir/config.h.in
+++ b/software/usb_ir/config.h.in
@@ -1,4 +1,4 @@
-/* config.h.in.  Generated from configure.in by autoheader.  */
+/* config.h.in.  Generated from configure.ac by autoheader.  */
 
 /* Define to 1 if you have the <dirent.h> header file, and it defines `DIR'.
    */
@@ -153,9 +153,6 @@
 
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
-
-/* version of python */
-#undef PYTHON_VERSION
 
 /* Define as the return type of signal handlers (`int' or `void'). */
 #undef RETSIGTYPE
