Making the final version of the loader.

--- a/firmware/usb_ir.loader/loader.inc.in
+++ b/firmware/usb_ir.loader/loader.inc.in
@@ -28,13 +28,13 @@ CDATA:         EQU 4   ; where data starts in control_pkt
 ; flash programming constants
 FLASH_BLOCK_SIZE: 	EQU 64 ;size of flash block
 ; addresses for SROM param block taken from the data sheet
-KEY1:				EQU	0xF8
-KEY2:				EQU	0xF9
-BLOCKID:			EQU 0xFA
-POINTER:			EQU 0xFB
-CLOCK:				EQU 0xFC
-DELAY:				EQU 0xFE
-FIRST_FLASH_VAR:	EQU KEY1
+KEY1:             EQU 0xF8
+KEY2:             EQU 0xF9
+BLOCKID:          EQU 0xFA
+POINTER:          EQU 0xFB
+CLOCK:            EQU 0xFC
+DELAY:            EQU 0xFE
+FIRST_FLASH_VAR:  EQU KEY1
 
 ; CRAPPY:
 ;   FIRST_FLASH_VAR to not overlap with control_pkt and SROM stuff
@@ -46,27 +46,28 @@ PINNED_VAR_START: EQU FIRST_FLASH_VAR - BUFFER_SIZE - 3 - 2
 ; start the bss for the body code after the bytes used by the usb
 ;  library + space for the stack.  The stack size is based on what
 ;  was used successfully on pre-bootloader versions.
-BODY_SKIP_BYTES:    EQU 67 + 18
+BODY_SKIP_BYTES:  EQU 67 + 18
 
 ; over all the previous 2 numbers define the space allowed for "body"
 ;  variables: 0xF8 - 150 - 3 - 2 - 67 - 18 == 8 ew, TINY!
 ;  NOTE: body code compilation cannot exceed 93 bytes used!
 
 ; constants to remove some "magic" numbers
-IN:			EQU 1
-OUT:		EQU 2
-FROM_PC:	EQU 0xCD
-TO_PC:		EQU 0xDC
+IN:      EQU 1
+OUT:     EQU 2
+FROM_PC: EQU 0xCD
+TO_PC:   EQU 0xDC
 
 ; constants to pin down variables and functions
 ; first the boot loader functions
-LOADER_JUMPS:       EQU 0x0080
-check_read:			EQU LOADER_JUMPS + 4 * 0
-read_buffer:		EQU LOADER_JUMPS + 4 * 1
-write_control:		EQU LOADER_JUMPS + 4 * 2
-read_control:		EQU LOADER_JUMPS + 4 * 3
-wait_for_IN_ready:	EQU LOADER_JUMPS + 4 * 4
-write_data:         EQU LOADER_JUMPS + 4 * 5
+LOADER_JUMPS:      EQU 0x0080
+check_read:        EQU LOADER_JUMPS + 4 * 0
+read_packet:       EQU LOADER_JUMPS + 4 * 1
+read_buffer:       EQU LOADER_JUMPS + 4 * 2
+read_control:      EQU LOADER_JUMPS + 4 * 3
+wait_for_IN_ready: EQU LOADER_JUMPS + 4 * 4
+write_packet:      EQU LOADER_JUMPS + 4 * 5
+write_control:     EQU LOADER_JUMPS + 4 * 6
 
 ; next the code body functions
 ; version ID indicates the firmware version loaded on this chip
